# doc-ai-assistant

./: .dockerignore  .env.example  Dockerfile  README.md  README.zh-TW.md  REDESIGN.md  pyproject.toml
app/: agent.py  auth.py  config.py  entries.py  llm.py  main.py  models.py  profile.py  rag.py  recall.py  sessions.py  store.py  voice.py
app/api/routes/: coach.py  journal.py
app/core/: clock.py  config.py  context.py  security.py
app/models/: __init__.py  entry.py  fact.py
app/schemas/: __init__.py  coach.py  journal.py
app/services/: agent.py  chat_model.py  entries.py  facts.py  recall.py  strengths.py
docs/: index.html
frontend/: .env.example  .env.production  .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  Landing.jsx  firebase.js
migrations/versions/: 5527cdb2cde8_add_the_facts_table.py  c3d4e5f6a7b8_meter_analysis_not_writing.py
scripts/: backfill_facts.py  deploy_gcp.sh  ingest.py
tests/: conftest.py  test_agent.py  test_chat.py  test_entries.py  test_facts.py  test_journal_api.py  test_main.py  test_profile.py  test_recall.py  test_strengths.py  test_voice.py
